--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </nav>
             
         <div>
-        <div><img class="pics" src="file:///C:/Users/91999/Downloads/project0/amber4.jpg"></div>
+        <div><img class="pics" src="amber4.jpg"></div>
         <div style="text-align: center;">   <h1> Amber Chawla</h1> </div>  
         <div class="text textcontainer">    
             <p> I am a computer science undergraduate at jamia 
